--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Site</title>
-    <link rel="stylesheet" href="header.css" />
-    <link rel="stylesheet" href="article.css" />
+    <link rel="stylesheet" href="/homepage/header.css" />
+    <link rel="stylesheet" href="/homepage/article.css" />
   </head>
   <body>
     <header>
