--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <article class="article">
       <div class="pics-1st">
         <div class="name-pic-life">
-          <img class="img1" src="img/picture-of-me.jpg" />
+          <img class="img1" src="/homepage/img/picture-of-me.jpg" />
           <p class="decription1 description1st">
             My name is Jacob, and I have many life goals—one of the most
             important is becoming a doctor so I can help people
@@ -63,7 +63,7 @@
           </p>
         </div>
         <div class="child-home child-home-2">
-          <img class="img2 img-2-2" src="img/picture-of-me.jpg" />
+          <img class="img2 img-2-2" src="/homepage/img/picture-of-me.jpg" />
           <p class="Learner1">I am jacob and i like making customers happy</p>
         </div>
       </div>
