--- a/CT/CT.html
+++ b/CT/CT.html
@@ -17,7 +17,7 @@
         <h1 class="name">Creative Thinking</h1>
         <nav class="header-nav">
           <ul class="nav-menu">
-            <li><a href="/homepage/home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="RSW.html">Research/Student Workbook</a></li>
             <li><a href="/AAS/AAS.html">Applied Academic Skills </a></li>
             <li><a href="CT.html">Creative Thinking </a></li>
