--- a/PS/PS.html
+++ b/PS/PS.html
@@ -30,5 +30,18 @@
         </nav>
       </div>
     </header>
+    <article class="article">
+      <div>
+        <iframe
+          src="https://docs.google.com/document/d/e/2PACX-1vSuQt1U8NmCcnegvU56guPNVx4J2kET8Dc7IoNQifT1QykA3BA-Ye8GoIdbIVLT24H9QgQHZ_xe233c/pub?embedded=true"
+        ></iframe>
+      </div>
+      <div>
+        <iframe
+          src="https://docs.google.com/document/d/e/2PACX-1vS7XZnDxq_vXrFa4f69Xi5U7Anb01NXAaDwMzIJCmFhGJfO2kCX0JyQUZWFEu8ZWfCPzbBgsCwQeJBy/pub?embedded=true"
+        ></iframe>
+      </div>
+      <div></div>
+    </article>
   </body>
 </html>
