--- a/AAS/AAS.html
+++ b/AAS/AAS.html
@@ -18,7 +18,7 @@
         <h1 class="name">Academic Skills</h1>
         <nav class="header-nav">
           <ul class="nav-menu">
-            <li><a href="/homepage/home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/RSW/RSW.html">Research/Student Workbook</a></li>
             <li><a href="AAS.html">Applied Academic Skills </a></li>
             <li><a href="/CT/CT.html">Creative Thinking </a></li>
@@ -36,7 +36,17 @@
       </div>
     </header>
     <article class="article">
-      <div class="div-1 div"></div>
+      <div class="div-1 div">
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vTa80B6fkzzz6nNqmBGCaH5-o_Th_Q58NfqsYqxSOc1vHrVz4vicryeWdKZ1zSm3C0bR-mwQAghZcaT/pubembed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="480"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+        <h2 class="bud-temp div-1-text">BMC</h2>
+      </div>
       <div class="div-2 div">
         <iframe
           class="bud-temp-pres"
