--- a/CRT/CRT.html
+++ b/CRT/CRT.html
@@ -19,7 +19,7 @@
         <h1 class="name">Critical Thinking</h1>
         <nav class="header-nav">
           <ul class="nav-menu">
-            <li><a href="/homepage/home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="RSW.html">Research/Student Workbook</a></li>
             <li><a href="/AAS/AAS.html">Applied Academic Skills </a></li>
             <li><a href="CT.html">Creative Thinking </a></li>
@@ -43,7 +43,11 @@
         </video>
         <p class="Pitch-video">Pitch Deck/Video Reflection on process</p>
       </div>
-      <div></div>
+      <div class="div-2">
+        <video width="390px" controls>
+          <source src="/CRT/WIN_20250716_13_15_36_Pro.mp4" />
+        </video>
+      </div>
       <div></div>
       <div></div>
     </article>
