--- a/RSW/RSW.html
+++ b/RSW/RSW.html
@@ -13,7 +13,7 @@
         <h1 class="name">Student Workbook</h1>
         <nav class="header-nav">
           <ul class="nav-menu">
-            <li><a href="/homepage/home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="RSW.html">Research/Student Workbook</a></li>
             <li><a href="/AAS/AAS.html">Applied Academic Skills </a></li>
             <li><a href="/CT/CT.html">Creative Thinking </a></li>
@@ -31,7 +31,18 @@
       </div>
     </header>
     <article class="article">
-      <div class="box-1"></div>
+      <div class="box-1">
+        <iframe
+          src="https://docs.google.com/presentation/d/e/2PACX-1vQxxyzLBYTyaoJgh2NG8eaT32Qs4OzIDSHntFYWW5hJVxt_8KNLCazDiY-LdqicYrr85j0OGSdmOBzz/pubembed?start=false&loop=false&delayms=3000"
+          frameborder="0"
+          width="480"
+          height="299"
+          allowfullscreen="true"
+          mozallowfullscreen="true"
+          webkitallowfullscreen="true"
+        ></iframe>
+        <h2 class="h2-1 h2-2">Entrupneure Research Project</h2>
+      </div>
       <div class="box-2">
         <iframe
           class="iframe-1"
