--- a/AAS/AAS.html
+++ b/AAS/AAS.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="article.css" />
     <script src="/script.js"></script>
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;700&family=Raleway:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -20,14 +20,13 @@
           <ul class="nav-menu">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/RSW/RSW.html">Research/Student Workbook</a></li>
-            <li><a href="AAS.html">Applied Academic Skills </a></li>
-            <li><a href="/CT/CT.html">Creative Thinking </a></li>
+            <li><a href="AAS.html">Applied Academic Skills</a></li>
+            <li><a href="/CT/CT.html">Creative Thinking</a></li>
             <li><a href="/CRT/CRT.html">Critical Thinking</a></li>
             <li class="dropdown">
               <a href="#">More ▾</a>
               <ul class="dropdown-menu">
                 <li><a href="/PS/PS.html">Problem Solving</a></li>
-                <li><a href="/TC/TC.html">Team Collaboration</a></li>
                 <li><a href="/GFS/GFS.html">Growth From Setbacks</a></li>
               </ul>
             </li>
@@ -35,38 +34,35 @@
         </nav>
       </div>
     </header>
+
     <article class="article">
       <div class="div-1 div">
         <iframe
           src="https://docs.google.com/presentation/d/e/2PACX-1vTa80B6fkzzz6nNqmBGCaH5-o_Th_Q58NfqsYqxSOc1vHrVz4vicryeWdKZ1zSm3C0bR-mwQAghZcaT/pubembed?start=false&loop=false&delayms=3000"
           frameborder="0"
           width="480"
-          allowfullscreen="true"
-          mozallowfullscreen="true"
-          webkitallowfullscreen="true"
+          allowfullscreen
         ></iframe>
         <h2 class="bud-temp div-1-text">BMC</h2>
       </div>
+
       <div class="div-2 div">
         <iframe
           class="bud-temp-pres"
           src="https://docs.google.com/presentation/d/e/2PACX-1vSt9nGPoBgwvwMgl8vPNgJi-l71ZrtZdBPDsY4MMzBBic0WXjenFzwrWAYE5VShzs9aJewWaRzznMYC/pubembed?start=false&loop=false&delayms=3000"
           frameborder="0"
           width="480"
-          allowfullscreen="true"
-          mozallowfullscreen="true"
-          webkitallowfullscreen="true"
+          allowfullscreen
         ></iframe>
-        <h2 class="bud-temp">budget template</h2>
+        <h2 class="bud-temp">Budget Template</h2>
       </div>
+
       <div class="div-3 div">
         <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLSflmZOD5NKKYypG9qqOlRz-k0akl4tDAT-Rbq9q6-Uu-Tyoug/viewform?embedded=true"
           width="auto"
           height="100%"
           frameborder="0"
-          marginheight="0"
-          marginwidth="0"
           class="form"
           >Loading…</iframe
         >
