--- a/PS/PS.html
+++ b/PS/PS.html
@@ -22,7 +22,6 @@
               <a href="#">More ▾</a>
               <ul class="dropdown-menu">
                 <li><a href="/PS/PS.html">Problem Solving</a></li>
-                <li><a href="/TC/TC.html">Team Collaboration</a></li>
                 <li><a href="/GFS/GFS.html">Growth From Setbacks</a></li>
               </ul>
             </li>
@@ -31,17 +30,23 @@
       </div>
     </header>
     <article class="article">
-      <div>
+      <div class="div-1 div">
+        <h3 class="text-only">
+          We plan to solve the problem of not being able to get enough sleep
+          because they are to hot of cold
+        </h3>
+      </div>
+      <div class="div-2 div">
         <iframe
           src="https://docs.google.com/document/d/e/2PACX-1vSuQt1U8NmCcnegvU56guPNVx4J2kET8Dc7IoNQifT1QykA3BA-Ye8GoIdbIVLT24H9QgQHZ_xe233c/pub?embedded=true"
         ></iframe>
+        <h2 class="res text">Comflict Resulaton</h2>
       </div>
-      <div>
+      <div class="div-3 div">
         <iframe
           src="https://docs.google.com/document/d/e/2PACX-1vS7XZnDxq_vXrFa4f69Xi5U7Anb01NXAaDwMzIJCmFhGJfO2kCX0JyQUZWFEu8ZWfCPzbBgsCwQeJBy/pub?embedded=true"
         ></iframe>
       </div>
-      <div></div>
     </article>
   </body>
 </html>
