--- a/GFS/GFS.html
+++ b/GFS/GFS.html
@@ -13,7 +13,7 @@
         <h1 class="name">Growth From Setbacks</h1>
         <nav class="header-nav">
           <ul class="nav-menu">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/RSW/RSW.html">Research/Student Workbook</a></li>
             <li><a href="/AAS/AAS.html">Applied Academic Skills </a></li>
             <li><a href="/CT/CT.html">Creative Thinking </a></li>
@@ -22,7 +22,6 @@
               <a href="#">More ▾</a>
               <ul class="dropdown-menu">
                 <li><a href="/PS/PS.html">Problem Solving</a></li>
-                <li><a href="/TC/TC.html">Team Collaboration</a></li>
                 <li><a href="/GFS/GFS.html">Growth From Setbacks</a></li>
               </ul>
             </li>
