--- a/CRT/CRT.html
+++ b/CRT/CRT.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -21,8 +21,8 @@
           <ul class="nav-menu">
             <li><a href="/index.html">Home</a></li>
             <li><a href="RSW.html">Research/Student Workbook</a></li>
-            <li><a href="/AAS/AAS.html">Applied Academic Skills </a></li>
-            <li><a href="CT.html">Creative Thinking </a></li>
+            <li><a href="/AAS/AAS.html">Applied Academic Skills</a></li>
+            <li><a href="CT.html">Creative Thinking</a></li>
             <li><a href="CRT.html">Critical Thinking</a></li>
             <li class="dropdown">
               <a href="#">More ▾</a>
@@ -35,20 +35,22 @@
         </nav>
       </div>
     </header>
+
     <article class="article">
-      <div class="div-1">
-        <video width="390px" controls>
-          <source src="/CRT/1000000661.mp4" />
+      <div class="div div-1">
+        <video class="responsive-video" controls>
+          <source src="/CRT/1000000661.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
         </video>
-        <p class="Pitch-video">Pitch Deck/Video Reflection on process</p>
+        <p class="pitch-video">Pitch Deck / Video Reflection on Process</p>
       </div>
-      <div class="div-2">
-        <video width="390px" controls>
-          <source src="/CRT/WIN_20250716_13_15_36_Pro.mp4" />
+
+      <div class="div div-2">
+        <video class="responsive-video" controls>
+          <source src="/CRT/WIN_20250716_13_15_36_Pro.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
         </video>
       </div>
-      <div></div>
-      <div></div>
     </article>
   </body>
 </html>
